Parallel indexers and more see README